[project]
name = "test-project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.62.0",
    "beautifulsoup4>=4.13.4",
    "duckdb>=1.3.2",
    "fastapi>=0.116.1",
    "gunicorn>=23.0.0",
    "lxml>=6.0.0",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "python-dotenv>=0.9.9",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "uvicorn>=0.35.0",
]
